[project]
name = "LangGraph-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.23",
    "langchain-ollama>=0.3.2",
    "langchain[ollama]>=0.3.25",
    "langgraph>=0.4.3",
    "pip>=25.1.1",
    "python-dotenv>=1.1.0",
]
